background color change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="col-md-6 text-right text-uppercase">
           <h1 class="title-super text-thin">Bobby G</h1>
-          <h4>Brogrammer Extraordinaire</h4>
+          <h4>Open Source Programmer</h4>
         </div>
       </div>
 
